# A Fission Rust function as a full Cargo project. The only contract:
# the binary must serve HTTP on 127.0.0.1:$FISSION_RUNTIME_PORT, so any
# framework works (axum shown here; actix-web, rocket, warp all fine).
[package]
name = "echo-example"
version = "0.1.0"
edition = "2024"

# Standalone crate, not part of the environment workspace.
[workspace]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
serde_json = "1"

[profile.release]
lto = "thin"
strip = true
